syntax = "proto3";

package main;

option go_package = "github.com/nametake/protoc-gen-gohttp/examples;main";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
